// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render styles for size lg 1`] = `
.c0 {
  color: #00c0a5;
  font-size: 1.125rem;
  line-height: calc(24 / 18);
  font-family: 'Open Sans',sans-serif;
  font-weight: bold;
  cursor: pointer;
}

.c0:hover,
.c0:focus,
.c0:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #007363;
}

<a
  className="c0"
  size="lg"
/>
`;

exports[`Link should render styles for size md 1`] = `
.c0 {
  color: #00c0a5;
  font-size: 1rem;
  line-height: calc(24 / 16);
  font-family: 'Open Sans',sans-serif;
  font-weight: bold;
  cursor: pointer;
}

.c0:hover,
.c0:focus,
.c0:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #007363;
}

<a
  className="c0"
  size="md"
/>
`;

exports[`Link should render styles for size sm 1`] = `
.c0 {
  color: #00c0a5;
  font-size: 0.875rem;
  line-height: calc(20 / 14);
  font-family: 'Open Sans',sans-serif;
  font-weight: bold;
  cursor: pointer;
}

.c0:hover,
.c0:focus,
.c0:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #007363;
}

<a
  className="c0"
  size="sm"
/>
`;

exports[`heading() should display styles for size lg 1`] = `
.c0 {
  color: #474747;
  font-size: 2.3125rem;
  font-weight: 500;
  line-height: calc(40 / 37);
  font-family: 'Cabin',sans-serif;
}

<div
  className="c0"
/>
`;

exports[`heading() should display styles for size md 1`] = `
.c0 {
  color: #474747;
  font-size: 1.75rem;
  font-weight: 500;
  line-height: calc(32 / 28);
  font-family: 'Cabin',sans-serif;
}

<div
  className="c0"
/>
`;

exports[`heading() should display styles for size sm 1`] = `
.c0 {
  color: #474747;
  font-size: 1.375rem;
  font-weight: 500;
  line-height: calc(28 / 22);
  font-family: 'Cabin',sans-serif;
}

<div
  className="c0"
/>
`;

exports[`heading() should display styles for size xl 1`] = `
.c0 {
  color: #474747;
  font-size: 2.875rem;
  font-weight: bold;
  line-height: calc(50 / 46);
  font-family: 'Cabin',sans-serif;
}

<div
  className="c0"
/>
`;

exports[`heading() should display styles for size xs 1`] = `
.c0 {
  color: #474747;
  font-size: 1.125rem;
  font-weight: 500;
  line-height: calc(24 / 18);
  font-family: 'Cabin',sans-serif;
}

<div
  className="c0"
/>
`;
